--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
               <h2>About A Million Dreams LLC</h2>
               <br/>
                 <p>A Million Dreams LLC is a company that looks to take the million ideas in our heads and turn them into something concrete. A million dreams is all it's gonna take.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
+                <p>Thank you to <a href="https://github.com/swcool">Shane Weng</a> for making such an easy and clean Jekyll template.</p>
                 <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
                 <br/>
               </div>
