--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
 	<body>
 		{% include header.html %}
 		{% include about.html %}
-		# {% include page_content.html %} #
+		{% comment %}
+		{% include page_content.html %}
+		{% endcomment %}
 		{% include contact.html %}
 		{% include footer.html %}
 		{% include js.html %}
