--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,10 +12,10 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
-                    <li>
+                    <!-- <li>
                         <a href="#services">Services</a>
                     </li>
-                    <li class="footer-menu-divider">&sdot;</li>
+                    <li class="footer-menu-divider">&sdot;</li> -->
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
